updates, spark deployment ok

--- a/ansible/templates/slaves.j2
+++ b/ansible/templates/slaves.j2
@@ -1,5 +1,5 @@
 {% for host in groups[cluster_name +'_slaves'] %}
-{{ hostvars[host].openstack.name }}
+{{ hostvars[host].ansible_hostname }}
 {% endfor %}{# {% if use_yarn %}
 {{ active_master }}
 {% endif %} #}
