Cleanup, install latest version Spark and Hadoop:
- Hadoop version 3.3.5
- Spark version 3.4.0

TODO:
- destroy cluster not tested

--- a/ansible/templates/mapred-site.xml.j2
+++ b/ansible/templates/mapred-site.xml.j2
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
 <!--
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,16 +17,12 @@
 <!-- Put site-specific property overrides in this file. -->
 
 <configuration>
-  <property>
-    <name>dfs.replication</name>
-    <value>3</value>
-  </property>
-  <property>
-      <name>dfs.namenode.name.dir</name>
-      <value>file:///usr/local/hadoop/hdfs/data</value>
-  </property>
-  <property>
-      <name>dfs.datanode.data.dir</name>
-      <value>file:///usr/local/hadoop/hdfs/data</value>
-  </property>
+    <property>
+        <name>mapreduce.jobtracker.address</name>
+        <value>{{ active_master }}:54311</value>
+    </property>
+    <property>
+        <name>mapreduce.framework.name</name>
+        <value>yarn</value>
+    </property>
 </configuration>
